--- a/coder/哈希查找.md
+++ b/coder/哈希查找.md
@@ -21,12 +21,12 @@
 ### 3、平方取中法：将关键字平方，然后再取中间部分位数作为哈希映射的因子；
 ```
 以关键字的平方值的中间几位作为存储地址。求"关键字的平方值”的目的是"扩大差别”和“贡献均衡”即:关键字的各位都在平方值的中间几位有所贡献，Hash值中应该有各位影子。
-       补位）      36进制：字符26个，数字10个
-A      0A         00 01    
-JA     JA         09 01
-I7     I7         08 34
-PI     PI         16 08
-P2     P2         16 29
+
+取关键字平方后的中间几位为哈希地址。由于一个数的平方的中间几位与这个数的每一位都有关，因而，平方取中法产生冲突的机会相对较小。平方取中法中所取的位数由表长决定。
+
+例： 
+    K = 456 , K2 = 456x456=207936，若哈希表的长度m=102，则可取79（中间两位）作为哈希函数值
+
 ```
 ### 4、折叠法：关键字位数较长时，可将关键字分割成位数相等的几部分(最后一 部分位数可以不同) ,取这几部分的叠加和(舍去高位的进位)作为哈希地址。位数由存储地址的位数确定。
 ```
@@ -59,6 +59,82 @@ ps：p的选择很重要，如果选得不好会产生很多冲突。
 
 
 ## 字符串的哈希
+### 字符ascii码，二分查找
+### 字符串各个字符ascii码求和，后采用除留余数法
+### 按位加常数，再求和，再除留余数
+```
+f(x)=(E x[N-i-1] * 32^i ) % 表长
+32的次方，可以减少乘法运算，简化为位移操作。
+
+1、可以所有的位数参与计算
+2、选择部分固定位的字符参与计算
+```
 
 
-## 哈希的冲突处理
+## 哈希的冲突处理·
+### 通过哈嘘函数计算后，有两个元素得到的结果一样，因而冲突
+### 冲突无法消灭，只可妥善处理
+#### 1、线性探测，解决冲突
+```
+19, 01, 23, 14, 55, 68, 11, 82, 36
+设定哈希函数H(key) = key MOD 11 (表长=11 )
+
+【 采用线性探测再散列处理冲突 】 -----------------
+
+索引      0  1  2  3  4  5  6  7  8  9  10
+第一次   |  |  |  |  |  |  |  |  |19|  |  |   [ 19%11=8 ]
+第二次   |  |01|  |  |  |  |  |  |19|  |  |   [ 1%11=1 ]
+第三次   |  |01|23|  |  |  |  |  |19|  |  |   [ 23%11=1 冲突了，向后探测，(2[当前的哈希结果]+1(查找次数))%11(便于处理超出表长的时候)=2，2号非空，所以放入2号 ]
+第四次   |  |01|23|14|  |  |  |  |19|  |  |   [ 14%11=3 ]
+第五次   |55|01|23|14|  |  |  |  |19|  |  |   [ 55%11=0 ]
+第六次   |55|01|23|14|68|  |  |  |19|  |  |   [ 68%11=2 冲突了，向后探测，(2+1%11=3，3号非空，继续探测，(2+2)%11=4，4号空，所以放入4号 ]
+...
+...
+...
+分布     |55|01|23|14|68|11|82|36|19|  |  |
+冲突次数 |1 |1 |2 |1 |3 |6 | 2| 5 |1 |
+
+
+【 若采用二次探测再散列处理冲突 】 -----------------
+当出现冲突的时候，把冲突后寻找的次数，进行二次 哈希计算。通过指数跳跃，增加查找范围，减少冲突再冲突的概率，来降低处理冲突的时间
+但是这种方法，一般要求存储空间为表长的两倍，避免二次的时候超出空间
+19, 01, 23, 14, 55, 68, 11, 82, 36
+设定哈希函数H(key) = key MOD 11 (表长=11 )
+
+索引      0  1  2  3  4  5  6  7  8  9  10
+第一次   |  |  |  |  |  |  |  |  |19|  |  |   [ 19%11=8 ]
+第二次   |  |01|  |  |  |  |  |  |19|  |  |   [ 1%11=1 ]
+第三次   |  |01|23|  |  |  |  |  |19|  |  |   [ 23%11=1 冲突了，向后探测，(2[当前的哈希结果]+1(查找次数)^2)%11(便于处理超出表长的时候)=2，2号非空，所以放入2号  ]
+第四次   |  |01|23|14|  |  |  |  |19|  |  |   [ 14%11=3 ]
+第五次   |55|01|23|14|  |  |  |  |19|  |  |   [ 55%11=0 ]
+第六次   |55|01|23|14|  |  |68|  |19|  |  |   [ 68%11=2 冲突了，向后探测，(2+1^2)%11=3，3号非空，继续探测，(2+2^2)%11=6，6号空，所以放入6号 ]
+...
+...
+...
+分布     |55|01|23|14|11|82|68|36|19|  |
+冲突次数 |1 |1 |2 |1 |3 |1 | 4| 4 |1 |
+
+
+【 若采用随机数处理冲突,随机数假设为9 】 ---------------------
+类似的，再冲突的时候，采用增量为固定的随机数来，扩展冲突查找范围，来降低处理冲突的时间
+19, 01, 23, 14, 55, 68, 11, 82, 36
+设定哈希函数H(key) = key MOD 11 (表长=11 )
+
+索引      0  1  2  3  4  5  6  7  8  9  10
+第一次   |  |  |  |  |  |  |  |  |19|  |  |   [ 19%11=8 ]
+第二次   |  |01|  |  |  |  |  |  |19|  |  |   [ 1%11=1 ]
+第三次   |  |01|  |  |  |  |  |  |19|  |23|   [ 23%11=1 冲突了，向后探测，(2[当前的哈希结果]+1(查找次数)*9)%11(便于处理超出表长的时候)=10，10号非空，所以放入10号  ]
+第四次   |  |01|  |14|  |  |  |  |19|  |23|   [ 14%11=3 ]
+第五次   |55|01|  |14|  |  |  |  |19|  |  |   [ 55%11=0 ]
+第六次   |55|01|68|14|  |  |  |  |19|  |  |   [ 68%11=2 ]
+...
+...
+...
+分布     |55|01|68|14|  |82|36|  |19|11|23|
+冲突次数  |1 |1 |1 |1 |  |1 | 5|  |1 |2 |2 |
+
+
+```
+#### 2、再哈希，多次多个哈希方法来确定最终的哈希结果
+#### 3、链地址，把所有同样一个哈希结果的结果，用链表存储
+#### 4、公共溢出区法，将所有的冲突结果，保存再公共溢出存储表，可以扩展多个溢出区，每个溢出区也用不同的哈希方法
