--- a/coder/哈希查找.md
+++ b/coder/哈希查找.md
@@ -74,7 +74,7 @@ f(x)=(E x[N-i-1] * 32^i ) % 表长
 ## 哈希的冲突处理·
 ### 通过哈嘘函数计算后，有两个元素得到的结果一样，因而冲突
 ### 冲突无法消灭，只可妥善处理
-#### 1、线性探测，解决冲突
+#### 1、开放地址法
 ```
 19, 01, 23, 14, 55, 68, 11, 82, 36
 设定哈希函数H(key) = key MOD 11 (表长=11 )
