选择排序，归并排序

--- a/coder/排序.md
+++ b/coder/排序.md
@@ -106,14 +106,52 @@ int shell_sort(vector_int& in)
 ```
 
 ## 选择排序
+### 思想：每次循环，在队列中的剩余未排序的序列，选择最小/大的值，排到排序队列尾部。
+#### 以第一个开始，视为第一个已经有序，从第二个开始，相后遍历，找到最小/大的，和第一个交换
+#### 以此类推，第一个确定为最小/大后，从第二个开始，查找，替换，直到最后一个
 
 ```
+template<typename array_type>
+int select_sort(array_type& in)
+{
+    int run_cnt = 0;
+    auto select_it = in.begin();
+    
+    //从第二个开始判断
+    for(; select_it != in.end() ; select_it ++)
+    {
+        //每次都把当前循环的第一个作为初始的最小的位置
+        auto least_index = select_it;
+        for(auto index = select_it+1; index != in.end() ; index ++)
+        {
+            run_cnt ++;
+            if(*index < *least_index)
+            {
+                //每次都记录当前的最小值
+                least_index = index;
+            }
+        }
+            
+        //和循环的第一个交换
+        int tmp = *least_index;
+        *least_index = *select_it;
+        *select_it = tmp;
 
-int select_sort(list_int& in, list_int& out)
+        //printf_array_int(in);
+    }
+
+    return run_cnt;
+}
+
+//非严格的选择排序，而是一种变种，增加一个存储空间，
+//循环遍历，将原来队列中的数据，依次在新队列中，找到合适的位置，插入
+//是一种 选择和插入 混合使用的排序
+template<typename array_type>
+int select_sort(array_type& in, array_type& out)
 {
     int run_cnt = 0;
     auto item_in = in.begin();
-    out.push_front(*item_in);
+    out.insert(out.begin(), *item_in);
     
     for(++item_in ; item_in != in.end() ; item_in ++)
     {
@@ -141,6 +179,147 @@ int select_sort(list_int& in, list_int& out)
 }
 
 //优化---------
+//PS：首先讲一下，合并两个有序队列。两个有序队列合并的时候，只需要互相出栈两个队列（每次比较队列的第一个），只要其中一个队列遍历结束，那么另一个队列只需要插入到合并队列的尾部，即可完成有序合并
+//归并排序：归并的思路，就是将队列分组归类，然后合并各组
+//1、将队列等分分组，在组内使用排序，达到各个分组内部是有序的
+//2、循环 合并相邻分组
+//3、直到完成最后两个最大的分组合并，从而得到排序的队列
+
+//合并有序队列
+template<typename array_type>
+int merge_sort_array_int(
+    typename array_type::iterator left_it, int left_cnt,    //左边起始位置，左边循环次数
+    typename array_type::iterator right_it, int right_cnt,  //右边...
+    array_type& out, typename array_type::iterator insert_it)   //输出队列，合并插入位置
+{
+    int run_cnt = 0;
+    
+    int left_loop = 0;
+    int right_loop = 0;
+    //从头开始合并，直到其中一个遍历完，则另一个直接从遍历位置 插入到队尾
+    while(left_loop != left_cnt && right_loop != right_cnt)
+    {
+        run_cnt ++;
+
+        //std::cout << "left " << *left_it << " right "  << *right_it << std::endl; 
+        if(*left_it < *right_it)//如果左边小于右边，则把左边到插入合并队列
+        {
+            *insert_it = *left_it;//返回插入后到位置
+            left_loop ++;   //遍历递增
+            left_it++;
+        }
+        else    //把右边的插入到合并队列
+        {
+            *insert_it = *right_it;//返回插入后到位置
+            right_it++;
+            right_loop++;
+        }
+
+        insert_it ++;
+        //printf_array_int(out);
+    }
+
+    if(left_loop == left_cnt)   //如果左边到遍历完，则把右边剩余到直接插入到队尾
+    {
+        run_cnt ++;
+
+        while (right_loop != right_cnt)
+        {
+            *insert_it = *right_it;
+            insert_it ++;
+            right_it++;
+            right_loop++;
+        }
+    }
+    else if(right_loop == right_cnt)    //如果右边到遍历完，则把左边到剩余队列，直接插入到队尾
+    {
+        run_cnt ++;
+
+        while(left_loop != left_cnt)
+        {
+            *insert_it = *left_it;
+            insert_it ++;
+            left_loop ++;
+            left_it++;
+        }
+    }
+
+    return run_cnt;
+}
+
+//归并排序
+int merge_sort(vector_int& vc)
+{
+    //适合在可以O(1) 时间访问到队列到数据结构中归并排序，否则还需要额外到时间来定位，分组
+    int run_cnt = 0;
+
+    int cnt = vc.size();
+    vector_int vc_tmp(cnt, 0);//构造一个同样大小到队列，缓存
+
+    //循环分组归并，按照2到倍数扩大分组，直到只剩两组进行归并
+    int space = 2;
+    while(1)
+    {
+        int perfect_merge_index = cnt - (cnt % space);
+        std::cout << " space " << space << ", perfect index " << perfect_merge_index << std::endl;
+        int st = space /2;
+        int i = 0;
+        //正常合并，可以完美分组的，这里也可以用中间位置来作为遍历游标，就可以在内部方便计算是不是一次完美的分组了
+        for(;i < perfect_merge_index ; i += space)
+        {
+            int left = i;
+            int right = left + st;
+            //std::cout << " i " << i << " left " << left << " right "  << right << std::endl; 
+            //合并
+            vector_int::iterator left_it = vc.begin() + left;
+            vector_int::iterator right_it = vc.begin() + right;
+
+            //std::cout << "left " << *left_it << " right "  << *right_it << std::endl; 
+            vector_int::iterator insert_it = vc_tmp.begin() + left;
+            run_cnt += merge_sort_array_int(left_it,st,right_it,st,vc_tmp,insert_it);
+        }
+
+        //剩下最后一个不能完美分组的合并
+        if(i < cnt)
+        {
+            //最后一次合并
+            int left = i;
+            int left_loop = st;
+            int right = left + st;
+            int right_loop = st;
+            if(right > cnt) //右边超出范围，则只有一个左边合并
+            {
+                right = cnt -1;
+                right_loop = 0;
+            }
+            else    //右边不完整
+            {
+                right = left + st;
+                right_loop = cnt - right;
+            }
+            
+            //std::cout << " not perfect " << std::endl; 
+            //std::cout << " i " << i << " left " << left << " loop " << left_loop << " right "  << right << " loop " << right_loop << std::endl; 
+            //合并
+            vector_int::iterator left_it = vc.begin() + left;
+            vector_int::iterator right_it = vc.begin() + right;
+
+            //std::cout << "left " << *left_it << " right "  << *right_it << std::endl; 
+            vector_int::iterator insert_it = vc_tmp.begin() + left;
+            run_cnt += merge_sort_array_int(left_it,left_loop,right_it,right_loop,vc_tmp,insert_it);
+        }
+
+        vc = vc_tmp;
+        //printf_array_int(vc);
+
+        if(space >= cnt)
+            break;
+
+        space = space*2;
+    }
+
+    return run_cnt;
+}
 
 ```
 ## 交互排序
