冒泡排序和 快速排序

--- a/coder/排序.md
+++ b/coder/排序.md
@@ -322,8 +322,98 @@ int merge_sort(vector_int& vc)
 }
 
 ```
-## 交互排序
+## 交换排序
+### 主要思想：通过“交换”无效队列中的记录，从而得到其中关键字或者最大或者最小的记录，并将它加入到有序子队列中，以此方法增加记录的有序子队列的长度。
+### 代表排序算法：冒泡排序，快速排序
+```
 
+//冒泡排序
+//遍历，将最大或最小的数据，交换到对头或者尾部，逐步得到有序的子队列
+template<typename array_type>
+int bubble_sort(array_type& ls)
+{
+    int run_cnt = 0;
+
+    auto ls_it = ls.begin();
+    auto buble_index = ls.end();//记录可以冒泡到的位置，此位置之后的队列为有序的
+    //把大的冒到后面，可冒泡到位置前移
+    for(; ls_it != buble_index; buble_index--)
+    {
+        auto ls_it_this = ls_it;
+        auto ls_it_next = ls_it_this;
+        ls_it_next++;
+        //俩俩比较，大的交换。从而得到最后的一个为最大值
+        for(; ls_it_next != buble_index; ls_it_this++, ls_it_next++)
+        {
+            if(*ls_it_this > *ls_it_next)//前面的比后面的大，则交换
+            {
+                //std::cout << *ls_it_this << " bubble behind " << *ls_it_next  << std::endl;
+                int tmp = *ls_it_this;
+                *ls_it_this = *ls_it_next;
+                *ls_it_next = tmp;
+            }
+
+            run_cnt++;
+        }
+        
+        //printf_array_int(ls);
+    }
+
+    return run_cnt;
+}
+
+//优化 -----
+//快速排序
+//循环遍历一个基准数的位置，并且把大于基准的放在右边，把小于基准的放在左边
+//然后递归的在基准位置的左边和右边区域，重复上一步
+
+template<typename array_type>
+int quick_sort(array_type& ls,typename array_type::iterator left, typename array_type::iterator right)
+{
+    int run_cnt = 0;
+
+    //拷贝左右游标，来遍历
+    typename array_type::iterator left_cp = left;
+    typename array_type::iterator right_cp = right;
+
+    //每次取第一个为key
+    int key = *left;//大于key到放右边，小于key到放左边
+    while(left_cp != right_cp)
+    {
+        //std::cout << "------------- " << std::endl;  
+        //printf_array_int(ls);
+
+        run_cnt ++;
+        //std::cout << "key " << key << " left " << *left_cp << " right: " << *right_cp << std::endl;
+
+        //从右边找到第一个小于key的
+        while((left_cp != right_cp) && (*right_cp > key))
+            right_cp --;
+        
+        //std::cout << "find right: " << *right_cp << std::endl;
+        if(left_cp != right_cp)
+            *left_cp = *right_cp;//把找到小于key的，放到左边
+
+        //从左边开始，找到第一个大于key的
+        while((left_cp != right_cp) && (*left_cp <= key))
+            left_cp++;
+
+        //std::cout << "find left " << *left_cp << std::endl;
+        if(left_cp != right_cp)
+            *right_cp = *left_cp;//把找到小于key的，放到左边
+
+        *left_cp = key;
+    }
+
+    //递归把左边和右边的，继续做快速排序
+    if(left != left_cp)
+        run_cnt += quick_sort(ls, left, --left_cp);
+    if(right != right_cp)
+        run_cnt += quick_sort(ls, ++right_cp,right);
+    
+    return run_cnt;
+}
+```
 ## 基数排序
 
 ## 外部排序
