基数排序，说明 & 代码

--- a/coder/排序.md
+++ b/coder/排序.md
@@ -415,5 +415,14 @@ int quick_sort(array_type& ls,typename array_type::iterator left, typename array
 }
 ```
 ## 基数排序
+### 如果需要排序当数据有多个排序基准当时候，采取对应当基数排序
+### 比如：对学生的，院/系/学号排序的时候，各个基数为院/系/学号。先把队列按照【院】排序，再把队列按照【系】排序，再按照【学号】排序
+```
+//代码详见 test_cardinality_sort.cpp
 
+```
 ## 外部排序
+### 对于一次无法加载所有数据的情况，在外部分批排序，然后归并，从而得到排序数据
+### 经典题目：将一个文件里面的一亿数字排序。
+```
+```
